Issue #SB-13800 Values for all fields are not aligned correctly when there is more information

--- a/src/app/client/src/assets/styles/components/_form.scss
+++ b/src/app/client/src/assets/styles/components/_form.scss
@@ -183,7 +183,7 @@ select:-internal-autofill-selected {
   .sb-field.ui.left.icon.input{
     width: 100%;
     .icon{
-      z-index: 9999;
+      z-index: 9;
     }
   }
   .d-flex.flex-w-wrap{
