--- a/src/app/client/src/assets/styles/components/_metadata.scss
+++ b/src/app/client/src/assets/styles/components/_metadata.scss
@@ -54,9 +54,10 @@
 
     &.sb-meta-data-column {
         .sb-meta-data {
-            flex-direction: row;
+            flex-direction: column;
             margin: 8px 0px;
             flex-basis: 20%;
+            padding-right: ($base-block-space * 2);
         }
 
         .sb-meta-data dt,
